fix: dark mode support for homepage - inverted logo + text contrast

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,4 +1,3 @@
-
 .home {
   font-family: 'Open Sans', sans-serif;
   font-size: 24px;
@@ -19,6 +18,10 @@
 
 .home article {
   width: 80vw;
+}
+
+.home p {
+  color: #333;
 }
 
 .home a {
@@ -43,6 +46,15 @@
 
 .home nav li {
   padding: 15px;
+}
+
+/* Dark mode */
+[data-theme='dark'] .home p {
+  color: #e0e0e0;
+}
+
+[data-theme='dark'] .home a {
+  color: #fff;
 }
 
 @media only screen and (min-width: 600px) {
